--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
   sqflite: ^2.4.0
+  sqflite_common_ffi: ^2.3.4+4
 
 dev_dependencies:
+#  mockito: ^5.4.2
+#  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
 
